--- a/package.json
+++ b/package.json
@@ -9,16 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.2.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.5.0",
+    "@tanstack/react-query": "^5.64.2",
+    "next": "^14.2.23",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.2.1",
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
-    "tailwindcss": "^3.4.7"
+    "react-toastify": "^11.0.3",
+    "stripe": "^17.5.0",
+    "tailwindcss": "^3.4.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^9.19.0",
     "postcss": "^8",
     "typescript": "^5"
   }
