--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.64.2",
     "next": "^14.2.23",
     "next-auth": "^4.24.11",
+    "nprogress": "^0.2.0",
     "prisma": "^6.2.1",
     "react": "^18",
     "react-countdown": "^2.3.5",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^9.19.0",
