--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-toastify": "^11.0.3",
     "stripe": "^17.5.0",
     "tailwindcss": "^3.4.7",
