--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.2.1",
     "@stripe/react-stripe-js": "^3.1.1",
@@ -25,6 +26,7 @@
     "react-toastify": "^11.0.3",
     "stripe": "^17.5.0",
     "tailwindcss": "^3.4.7",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
